--- a/01.25 dars/Language/en.lproj/Localizable.strings
+++ b/01.25 dars/Language/en.lproj/Localizable.strings
@@ -1,4 +1,5 @@
 "hello" = "hello";
-"Welcome!" = "Welcome!";
-"Through this application, you can order any delicious food from Yewo. The order will arrive in a short time." = "Through this application, you can order any delicious food from Yewo. The order will arrive in a short time.";
-"Log in" = "Log in";
+"wcm" = "Welcome!";
+"aboutApp" = "Through this application, you can order any delicious food from Yewo. The order will arrive in a short time.";
+"login" = "Log in";
+"warn" = "You need to enter sign in";
