--- a/01.25 dars/Language/ru.lproj/Localizable.strings
+++ b/01.25 dars/Language/ru.lproj/Localizable.strings
@@ -1,4 +1,5 @@
-////"hello" = "здравствуйте";
-//"Welcome!" = "Добро пожаловать!";
-//"Through this application, you can order any delicious food from Yewo. The order will arrive in a short time." = "Через это приложение вы можете заказать любую вкусную еду от Yewo, заказ прибудет в короткие сроки.";
-//"Log in" = "Авторизоваться"
+"hello" = "здравствуйте";
+"wcm" = "Добро пожаловать!";
+"aboutApp" = "Через это приложение вы можете заказать любую вкусную еду от Yewo, заказ прибудет в короткие сроки.";
+"login" = "Авторизоваться";
+"warn" = "Вам необходимо войти в систему";
