--- a/01.25 dars/Language/uz.lproj/Localizable.strings
+++ b/01.25 dars/Language/uz.lproj/Localizable.strings
@@ -1,4 +1,5 @@
 "hello" = "salom";
-"Welcome!" = "Xush kelibsiz!";
-"Through this application, you can order any delicious food from Yewo. The order will arrive in a short time." = "Ushbu ilova orqali siz Yewoodan istalgan mazali taomga buyurtma berishingiz mumkin.Buyurtma qisqa vaqt ichida yetib boradi.";
-"Log in" = "Tizimga kirish";
+"wcm" = "Xush kelibsiz!";
+"aboutApp" = "Ushbu ilova orqali siz Yewoodan istalgan mazali taomga buyurtma berishingiz mumkin.Buyurtma qisqa vaqt ichida yetib boradi.";
+"login" = "Tizimga kirish";
+"warn" = "Avvalo tizimga kirish kerak";
